Bug 253395 - [Payment Request] ApplePayDeferredPaymentRequest - fix build on older SDKs that don't have [PKDeferredPaymentRequest setFreeCancellationDateTimeZone:]
Summary: [Payment Request] ApplePayDeferredPaymentRequest - fix build on older SDKs th...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P1 Major
Assignee: Gerald Squelart
URL:
Keywords: InRadar
Depends on: 253219
Blocks:
  Show dependency treegraph
 
Reported: 2023-03-04 13:59 PST by Gerald Squelart
Modified: 2023-03-04 14:22 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Squelart 2023-03-04 13:59:14 PST
Bug #253219 <rdar://104562407> added ApplePayDeferredPaymentRequest, but it relies on SDKs that have [PKDeferredPaymentRequest setFreeCancellationDateTimeZone:].

I'll add a `respondsToSelector` to handle older SDKs.
Comment 1 Radar WebKit Bug Importer 2023-03-04 13:59:23 PST
<rdar://problem/106239467>
Comment 2 Gerald Squelart 2023-03-04 14:07:47 PST
Pull request: https://github.com/WebKit/WebKit/pull/11073
Comment 3 EWS 2023-03-04 14:22:55 PST
Committed 261230@main (633a76e24024): <https://commits.webkit.org/261230@main>

Reviewed commits have been landed. Closing PR #11073 and removing active labels.