Ensure that [PKDeferredPaymentRequest setFreeCancellationDateTimeZone] exists before using it https://bugs.webkit.org/show_bug.cgi?id=253395 rdar://106239467

Reviewed by Aditya Keerthi.

[PKDeferredPaymentRequest setFreeCancellationDateTimeZone] was added in a recent SDK, so we should ensure it's present before trying to use it.

* Source/WebCore/PAL/pal/spi/cocoa/PassKitSPI.h:
* Source/WebKit/Shared/ApplePay/cocoa/DeferredPaymentRequestCocoa.mm:
(WebKit::platformDeferredPaymentRequest):

Canonical link: https://commits.webkit.org/261230@main